# BobEngine

./: .gitignore  BobEngine  CMakeLists.txt  LICENSE  Makefile  Makefile.old  README.md
include/: buffer.hpp  buffer_array.hpp  camera.hpp  cube.hpp  debug.hpp  shader.hpp  texture.hpp  utils.hpp
res/shaders/: frag.glsl  vert.glsl
res/shaders/fragment/: light_shader.glsl  object_shader.glsl  white_frag.glsl  wireframe_mode_frag.glsl
res/shaders/vertex/: light_vert.glsl  object_vert.glsl
src/: buffer.cpp  buffer_array.cpp  buffer_array.hpp  camera.cpp  debug.cpp  debug.hpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  utils.cpp  utils.hpp
